// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emulateRawMessage > accepts Cell, hex and base64 inputs and validates emulation options 1`] = `
{
  "rootTxHash": "b0cbeed9c09879065bc3f2a1ef9244e2756382512fab95c516b2ebfc029f3f6f",
  "stateUpdateHashOk": true,
  "trace": {
    "children": [],
    "inMessageHash": "cd953072a42206ee2fc415a2fa2f76254a46c6ed38a463dac697459b38fce295",
    "txHash": "b0cbeed9c09879065bc3f2a1ef9244e2756382512fab95c516b2ebfc029f3f6f",
  },
  "traceMetadata": {
    "endLt": "1000000",
    "externalHash": null,
    "startLt": "1000000",
    "traceId": "b0cbeed9c09879065bc3f2a1ef9244e2756382512fab95c516b2ebfc029f3f6f",
    "traceInfo": {
      "classification_state": "unavailable",
      "messages": 1,
      "pending_messages": 0,
      "trace_state": "complete",
      "transactions": 1,
    },
  },
  "transactions": [
    {
      "account": "0:2222222222222222222222222222222222222222222222222222222222222222",
      "accountStateAfter": {
        "account_status": "uninit",
        "balance": "2000000000",
        "code_boc": null,
        "code_hash": null,
        "data_boc": null,
        "data_hash": null,
        "extra_currencies": {},
        "frozen_hash": null,
        "hash": "220e35f3857e71ab537a31963d725096b32491feac2f9462ac183d5c04b617f0",
      },
      "accountStateBefore": {
        "account_status": "nonexist",
        "balance": null,
        "code_boc": null,
        "code_hash": null,
        "data_boc": null,
        "data_hash": null,
        "extra_currencies": {},
        "frozen_hash": null,
        "hash": "f35d5441baa03e412e0a91eb1ebcdbdc2d41776a65ca3b9b974a52b824b9dd51",
      },
      "actionCount": 0,
      "childTransactions": [],
      "computeInfo": "skipped",
      "description": {
        "aborted": true,
        "action": undefined,
        "bounce": undefined,
        "compute_ph": {
          "reason": "no_state",
          "skipped": true,
        },
        "credit_first": true,
        "credit_ph": {
          "credit": "2000000000",
          "credit_extra_currencies": {},
          "due_fees_collected": undefined,
        },
        "destroyed": false,
        "storage_ph": {
          "status_change": "unchanged",
          "storage_fees_collected": "0",
          "storage_fees_due": undefined,
        },
        "type": "ord",
      },
      "hash": "b0cbeed9c09879065bc3f2a1ef9244e2756382512fab95c516b2ebfc029f3f6f",
      "inMessage": {
        "bounce": false,
        "bounced": false,
        "createdAt": "1700000000",
        "createdLt": "10",
        "destination": "0:2222222222222222222222222222222222222222222222222222222222222222",
        "extraFlags": "0",
        "fwdFee": "0",
        "hash": "cd953072a42206ee2fc415a2fa2f76254a46c6ed38a463dac697459b38fce295",
        "ihrDisabled": true,
        "ihrFee": "0",
        "importFee": null,
        "opcode": 2882400001,
        "source": "0:1111111111111111111111111111111111111111111111111111111111111111",
        "value": "2000000000",
        "valueExtraCurrencies": {},
      },
      "lt": "1000000",
      "money": {
        "balanceAfter": 2000000000n,
        "balanceBefore": 0n,
        "sentTotal": 0n,
        "totalFees": 0n,
      },
      "now": 1700000000,
      "outMessages": [],
      "prevTransactionHash": "0000000000000000000000000000000000000000000000000000000000000000",
      "prevTransactionLt": "0",
    },
  ],
  "transactionsOrder": [
    "b0cbeed9c09879065bc3f2a1ef9244e2756382512fab95c516b2ebfc029f3f6f",
  ],
}
`;

exports[`emulateRawMessage > emulates a deterministic message cascade and synthesizes its trace 1`] = `
{
  "ignoreChksigValues": [
    true,
    false,
  ],
  "result": {
    "rootTxHash": "737840809131e42a3c15e79bbabbe7f7d01ded69024858464fd92e2a84c64878",
    "stateUpdateHashOk": true,
    "trace": {
      "children": [
        {
          "children": [],
          "inMessageHash": "04922c19d33282466e684da4c70eed4426faff94eefa68b762a2ef155c2a5cf7",
          "txHash": "d87d094028c93a1a86019421b950870e6efd6cc080a111cfcead726a69e871d4",
        },
      ],
      "inMessageHash": "c3f7ffa38fc909243463687096782d6763778376536db1485d81ec5a1e86ddb8",
      "txHash": "737840809131e42a3c15e79bbabbe7f7d01ded69024858464fd92e2a84c64878",
    },
    "traceMetadata": {
      "endLt": "1000002",
      "externalHash": "c3f7ffa38fc909243463687096782d6763778376536db1485d81ec5a1e86ddb8",
      "startLt": "1000000",
      "traceId": "737840809131e42a3c15e79bbabbe7f7d01ded69024858464fd92e2a84c64878",
      "traceInfo": {
        "classification_state": "unavailable",
        "messages": 2,
        "pending_messages": 0,
        "trace_state": "complete",
        "transactions": 2,
      },
    },
    "transactions": [
      {
        "account": "0:9d5412e7a11ed42772e9c0e50b1b9c62de3470fdc357e106f783dc2f4a986528",
        "accountStateAfter": {
          "account_status": "active",
          "balance": "98999693265",
          "code_boc": "te6cckEBBAEARQABFP8A9KQT9LzyyAsBAgEgAgMABNIwAFry0//tRNDT/9ESuvKi9ATR+AB/jhYhgBD0eG+lIJgC0wfUMAH7AJEy4gGz5ltABLW1",
          "code_hash": "d992502b94ea96e7b34e5d62ffb0c6fc73d78b3e61f11f0848fb3a1eb1afc912",
          "data_boc": "te6cckEBAQEAIgAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB7aYUQVw==",
          "data_hash": "2c226a62b1b25fbadcc0106aac69d3f85c88e43e3e9a23896ae3b0cdfedfde1e",
          "extra_currencies": {},
          "frozen_hash": null,
          "hash": "eb66c385b231f552fa717a5d276cc9b51d9cd094a74497439ffc3eefbbfdadd0",
        },
        "accountStateBefore": {
          "account_status": "active",
          "balance": "100000000000",
          "code_boc": "te6cckEBBAEARQABFP8A9KQT9LzyyAsBAgEgAgMABNIwAFry0//tRNDT/9ESuvKi9ATR+AB/jhYhgBD0eG+lIJgC0wfUMAH7AJEy4gGz5ltABLW1",
          "code_hash": "d992502b94ea96e7b34e5d62ffb0c6fc73d78b3e61f11f0848fb3a1eb1afc912",
          "data_boc": "te6cckEBAQEAIgAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB7aYUQVw==",
          "data_hash": "2c226a62b1b25fbadcc0106aac69d3f85c88e43e3e9a23896ae3b0cdfedfde1e",
          "extra_currencies": {},
          "frozen_hash": null,
          "hash": "512a208729570861f452913f4bea346e8ff4b0e014357e54e4a590f34a6e4386",
        },
        "actionCount": 1,
        "childTransactions": [
          "1000002",
        ],
        "computeInfo": {
          "exitCode": 0,
          "gasFees": 129134n,
          "gasUsed": 1937n,
          "success": true,
          "vmSteps": 50,
        },
        "description": {
          "aborted": false,
          "action": {
            "action_list_hash": "c37cae67d1184ad177c157eb830f77ad27e2e38ce0c3a12d5da9c28529d641a6",
            "msgs_created": 1,
            "no_funds": false,
            "result_arg": undefined,
            "result_code": 0,
            "skipped_actions": 0,
            "spec_actions": 0,
            "status_change": "unchanged",
            "success": true,
            "tot_actions": 1,
            "tot_msg_size": {
              "bits": "729",
              "cells": "1",
            },
            "total_action_fees": "22221",
            "total_fwd_fees": "66667",
            "valid": true,
          },
          "bounce": undefined,
          "compute_ph": {
            "account_activated": false,
            "exit_arg": undefined,
            "exit_code": 0,
            "gas_credit": "10000",
            "gas_fees": "129134",
            "gas_limit": "0",
            "gas_used": "1937",
            "mode": 0,
            "msg_state_used": false,
            "skipped": false,
            "success": true,
            "vm_final_state_hash": "0000000000000000000000000000000000000000000000000000000000000000",
            "vm_init_state_hash": "0000000000000000000000000000000000000000000000000000000000000000",
            "vm_steps": 50,
          },
          "credit_first": true,
          "credit_ph": undefined,
          "destroyed": false,
          "storage_ph": {
            "status_change": "unchanged",
            "storage_fees_collected": "0",
            "storage_fees_due": undefined,
          },
          "type": "ord",
        },
        "hash": "737840809131e42a3c15e79bbabbe7f7d01ded69024858464fd92e2a84c64878",
        "inMessage": {
          "bounce": null,
          "bounced": null,
          "createdAt": null,
          "createdLt": null,
          "destination": "0:9d5412e7a11ed42772e9c0e50b1b9c62de3470fdc357e106f783dc2f4a986528",
          "extraFlags": null,
          "fwdFee": null,
          "hash": "c3f7ffa38fc909243463687096782d6763778376536db1485d81ec5a1e86ddb8",
          "ihrDisabled": null,
          "ihrFee": null,
          "importFee": "0",
          "opcode": 0,
          "source": null,
          "value": null,
          "valueExtraCurrencies": {},
        },
        "lt": "1000000",
        "money": {
          "balanceAfter": 98999693265n,
          "balanceBefore": 100000000000n,
          "sentTotal": 1000000000n,
          "totalFees": 262289n,
        },
        "now": 1700000000,
        "outMessages": [
          {
            "bounce": false,
            "bounced": false,
            "createdAt": "1700000000",
            "createdLt": "1000001",
            "destination": "0:2222222222222222222222222222222222222222222222222222222222222222",
            "extraFlags": "0",
            "fwdFee": "44446",
            "hash": "04922c19d33282466e684da4c70eed4426faff94eefa68b762a2ef155c2a5cf7",
            "ihrDisabled": true,
            "ihrFee": "0",
            "importFee": null,
            "opcode": 4660,
            "source": "0:9d5412e7a11ed42772e9c0e50b1b9c62de3470fdc357e106f783dc2f4a986528",
            "value": "1000000000",
            "valueExtraCurrencies": {},
          },
        ],
        "prevTransactionHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "prevTransactionLt": "0",
      },
      {
        "account": "0:2222222222222222222222222222222222222222222222222222222222222222",
        "accountStateAfter": {
          "account_status": "uninit",
          "balance": "1000000000",
          "code_boc": null,
          "code_hash": null,
          "data_boc": null,
          "data_hash": null,
          "extra_currencies": {},
          "frozen_hash": null,
          "hash": "14858dde88cd9e9edbd512c8c4204a4a360be9e97597a39801b113f51e813d39",
        },
        "accountStateBefore": {
          "account_status": "uninit",
          "balance": "0",
          "code_boc": null,
          "code_hash": null,
          "data_boc": null,
          "data_hash": null,
          "extra_currencies": {},
          "frozen_hash": null,
          "hash": "dd2a589f9e11040f0f2fa59bc0528c5e0e96b405b3c54b173cf2a989e08a07ae",
        },
        "actionCount": 0,
        "childTransactions": [],
        "computeInfo": "skipped",
        "description": {
          "aborted": true,
          "action": undefined,
          "bounce": undefined,
          "compute_ph": {
            "reason": "no_state",
            "skipped": true,
          },
          "credit_first": true,
          "credit_ph": {
            "credit": "1000000000",
            "credit_extra_currencies": {},
            "due_fees_collected": undefined,
          },
          "destroyed": false,
          "storage_ph": {
            "status_change": "unchanged",
            "storage_fees_collected": "0",
            "storage_fees_due": undefined,
          },
          "type": "ord",
        },
        "hash": "d87d094028c93a1a86019421b950870e6efd6cc080a111cfcead726a69e871d4",
        "inMessage": {
          "bounce": false,
          "bounced": false,
          "createdAt": "1700000000",
          "createdLt": "1000001",
          "destination": "0:2222222222222222222222222222222222222222222222222222222222222222",
          "extraFlags": "0",
          "fwdFee": "44446",
          "hash": "04922c19d33282466e684da4c70eed4426faff94eefa68b762a2ef155c2a5cf7",
          "ihrDisabled": true,
          "ihrFee": "0",
          "importFee": null,
          "opcode": 4660,
          "source": "0:9d5412e7a11ed42772e9c0e50b1b9c62de3470fdc357e106f783dc2f4a986528",
          "value": "1000000000",
          "valueExtraCurrencies": {},
        },
        "lt": "1000002",
        "money": {
          "balanceAfter": 1000000000n,
          "balanceBefore": 0n,
          "sentTotal": 0n,
          "totalFees": 0n,
        },
        "now": 1700000000,
        "outMessages": [],
        "prevTransactionHash": "0000000000000000000000000000000000000000000000000000000000000000",
        "prevTransactionLt": "0",
      },
    ],
    "transactionsOrder": [
      "737840809131e42a3c15e79bbabbe7f7d01ded69024858464fd92e2a84c64878",
      "d87d094028c93a1a86019421b950870e6efd6cc080a111cfcead726a69e871d4",
    ],
  },
}
`;
